went to fix a spelling err. fixed css spacing and colors instead

--- a/src/components/experience/exp.module.css
+++ b/src/components/experience/exp.module.css
@@ -85,14 +85,13 @@
   align-items: center;
   gap: 17px;
   background: #19376d;
-  background: linear-gradient(90deg, #19376d 0%, rgba(25, 55, 109, 0) 100%);
+  background: linear-gradient(180deg, #ff0000 0%, #565ea8 100%);
+  box-shadow: 0 12px 10px 0 #006aff;
   border-radius: 10px;
   padding: 24px;
+  margin: 10px
 }
 
-.historyItem img {
-  width: 50px;
-}
 
 .historyItemDetails {
   font-family: var(--font-roboto);
